[gd_scene load_steps=22 format=2]

[ext_resource path="res://tileset/Magic-Cliffs-Environment/PNG/tileset.png" type="Texture" id=1]
[ext_resource path="res://night.jpg" type="Texture" id=2]
[ext_resource path="res://body.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://chain.gd" type="Script" id=5]
[ext_resource path="res://chainCompletedHoriz.png" type="Texture" id=6]
[ext_resource path="res://chainHead.gd" type="Script" id=7]
[ext_resource path="res://mage.gd" type="Script" id=8]
[ext_resource path="res://player_mage_sheet.png" type="Texture" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 8.83334, 35, 103, 31.6667, 96, 64, 64, 96, 19.6667, 61.25 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 6.61111, 35.2083, 32, 32, 32, 128, 13.9875, 127.917, 9.82086, 90.5903, 11.4722, 58.6458 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 32, 32, 32, 128, 0, 128, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 32, 32, 32, 32, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 32, 6.79529, 36.9786, 7.19714, 63.1006, 4.38403, 75.5588, 6.79529, 103.69, 0, 110.522, 0, 96, 0, 64 )

[sub_resource type="TileSet" id=7]
0/name = "tileset.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 32, 0, 128, 96 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tileset.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 160, 32, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tileset.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 160, 32, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tileset.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 96, 160, 32, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "tileset.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 512, 224, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "tileset.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 544, 160, 32, 128 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0

[sub_resource type="CapsuleShape2D" id=8]
radius = 13.4909
height = 4.48471

[sub_resource type="CircleShape2D" id=9]
radius = 3.54547

[sub_resource type="Animation" id=10]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../mage/mageSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14 ]
}

[sub_resource type="CapsuleShape2D" id=11]
radius = 13.8528

[sub_resource type="NavigationPolygon" id=12]
vertices = PoolVector2Array( 533.922, 148.37, 431.893, 147.009, 283.612, 142.928, 34.0163, 35.4851, 988.276, 36.3424, 951.557, 215.028, 826.403, 223.191, 804.637, 185.1, 796.474, 153.811, 988.276, 339.854, 966.521, 261.281, 958.359, 293.93, 958.268, 339.854, 540.724, 204.145, 645.473, 171.496, 697.167, 240.875, 505.354, 277.606, 421.01, 330.66, 490.39, 434.049, 467.263, 463.977, 363.249, 520.76, 364.106, 440.167, 385.641, 353.787, 770.627, 242.236, 810.078, 276.245, 845.448, 325.219, 693.086, 340.183, 563.85, 342.904, 939.314, 312.975, 265.928, 202.785, 401.965, 200.064, 286.333, 247.677, 356.39, 529.334, 476.786, 545.6, 353.818, 544.767, 615.544, 536.077, 804.798, 471.89, 806.512, 571.345, 547.526, 571.447, 905.304, 340.183, 955.696, 373.291, 924.83, 371.577, 776.069, 119.802, 676.761, 123.883, 101.322, 147.009, 35.7311, 573.917, 116.286, 204.145, 68.3114, 437.595, 705.329, 440.851, 825.375, 435.88, 827.089, 468.46, 645.473, 480.302, 595.139, 459.896, 567.931, 427.247, 862.242, 409.301, 859.67, 437.595, 923.973, 438.452, 902.539, 440.167, 896.537, 411.016, 474.065, 278.966, 406.046, 254.479, 438.695, 262.641, 231.918, 250.398, 280.892, 337.462, 358.433, 366.03, 317.622, 370.111, 188.386, 251.758, 146.215, 243.596, 65.7393, 454.742, 72.5983, 479.606, 68.3114, 521.617, 76.8852, 544.767 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 5, 6, 7, 8 ), PoolIntArray( 4, 9, 10 ), PoolIntArray( 4, 10, 5 ), PoolIntArray( 11, 10, 9, 12 ), PoolIntArray( 13, 14, 15, 16 ), PoolIntArray( 17, 18, 19, 20, 21, 22 ), PoolIntArray( 15, 23, 24, 25, 26, 27, 17, 16 ), PoolIntArray( 28, 11, 12 ), PoolIntArray( 23, 7, 6, 24 ), PoolIntArray( 29, 2, 1, 30, 31 ), PoolIntArray( 32, 20, 19, 33, 34 ), PoolIntArray( 35, 36, 37, 38 ), PoolIntArray( 14, 13, 0 ), PoolIntArray( 39, 28, 12, 40, 41 ), PoolIntArray( 4, 8, 42 ), PoolIntArray( 3, 4, 42, 43 ), PoolIntArray( 3, 43, 14, 0 ), PoolIntArray( 3, 2, 44 ), PoolIntArray( 45, 3, 44, 46, 47 ), PoolIntArray( 48, 26, 49, 50, 36 ), PoolIntArray( 48, 36, 35, 51 ), PoolIntArray( 51, 35, 52 ), PoolIntArray( 53, 51, 52 ), PoolIntArray( 53, 52, 18 ), PoolIntArray( 27, 53, 18, 17 ), PoolIntArray( 54, 55, 49, 26, 25 ), PoolIntArray( 41, 56, 57, 58, 39 ), PoolIntArray( 59, 16, 17 ), PoolIntArray( 59, 17, 60, 61 ), PoolIntArray( 30, 61, 60 ), PoolIntArray( 30, 60, 31 ), PoolIntArray( 62, 29, 31, 63 ), PoolIntArray( 39, 58, 54, 25 ), PoolIntArray( 64, 22, 21 ), PoolIntArray( 64, 21, 47, 65 ), PoolIntArray( 63, 65, 47 ), PoolIntArray( 62, 63, 47, 66 ), PoolIntArray( 67, 66, 47 ), PoolIntArray( 46, 67, 47 ), PoolIntArray( 45, 47, 68 ), PoolIntArray( 45, 68, 69, 70 ), PoolIntArray( 45, 70, 71 ), PoolIntArray( 38, 37, 45 ), PoolIntArray( 34, 33, 38, 45, 71 ) ]
outlines = [ PoolVector2Array( 34.0163, 35.4851, 988.276, 36.3424, 988.276, 339.854, 958.268, 339.854, 955.696, 373.291, 924.83, 371.577, 923.973, 438.452, 902.539, 440.167, 896.537, 411.016, 862.242, 409.301, 859.67, 437.595, 825.375, 435.88, 827.089, 468.46, 804.798, 471.89, 806.512, 571.345, 35.7311, 573.917 ), PoolVector2Array( 101.322, 147.009, 283.612, 142.928, 265.928, 202.785, 231.918, 250.398, 188.386, 251.758, 146.215, 243.596, 116.286, 204.145 ), PoolVector2Array( 286.333, 247.677, 406.046, 254.479, 421.01, 330.66, 385.641, 353.787, 358.433, 366.03, 317.622, 370.111, 280.892, 337.462 ), PoolVector2Array( 431.893, 147.009, 533.922, 148.37, 540.724, 204.145, 505.354, 277.606, 474.065, 278.966, 438.695, 262.641, 401.965, 200.064 ), PoolVector2Array( 563.85, 342.904, 693.086, 340.183, 705.329, 440.851, 645.473, 480.302, 567.931, 427.247 ), PoolVector2Array( 490.39, 434.049, 595.139, 459.896, 615.544, 536.077, 547.526, 571.447, 476.786, 545.6, 467.263, 463.977 ), PoolVector2Array( 676.761, 123.883, 776.069, 119.802, 796.474, 153.811, 804.637, 185.1, 770.627, 242.236, 697.167, 240.875, 645.473, 171.496 ), PoolVector2Array( 826.403, 223.191, 951.557, 215.028, 966.521, 261.281, 958.359, 293.93, 939.314, 312.975, 905.304, 340.183, 845.448, 325.219, 810.078, 276.245 ), PoolVector2Array( 68.3114, 437.595, 364.106, 440.167, 363.249, 520.76, 356.39, 529.334, 353.818, 544.767, 76.8852, 544.767, 68.3114, 521.617, 72.5983, 479.606, 65.7393, 454.742 ) ]

[node name="game" type="Node2D"]

[node name="map" type="Node2D" parent="."]
editor/display_folded = true

[node name="platforms" type="TileMap" parent="map"]
tile_set = SubResource( 7 )
cell_size = Vector2( 32, 32 )
collision_layer = 19
collision_mask = 19
format = 1
tile_data = PoolIntArray( 0, 4, 0, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 4, 0, 5, 4, 0, 6, 4, 0, 7, 4, 0, 8, 4, 0, 9, 4, 0, 10, 4, 0, 11, 4, 0, 12, 4, 0, 13, 4, 0, 14, 4, 0, 15, 4, 0, 16, 4, 0, 17, 4, 0, 18, 4, 0, 19, 4, 0, 20, 4, 0, 21, 4, 0, 22, 4, 0, 23, 4, 0, 24, 4, 0, 25, 4, 0, 26, 4, 0, 27, 4, 0, 28, 4, 0, 29, 4, 0, 30, 4, 0, 31, 4, 0, 65536, 4, 0, 65567, 4, 0, 131072, 4, 0, 131103, 4, 0, 196608, 4, 0, 196639, 4, 0, 262144, 4, 0, 262148, 0, 0, 262165, 0, 0, 262175, 4, 0, 327680, 4, 0, 327693, 0, 0, 327711, 4, 0, 393216, 4, 0, 393247, 4, 0, 458752, 4, 0, 458778, 0, 0, 458783, 4, 0, 524288, 4, 0, 524297, 0, 0, 524319, 4, 0, 589824, 4, 0, 589846, 0, 0, 589855, 4, 0, 655360, 4, 0, 655390, 2, 0, 655391, 4, 0, 720896, 4, 0, 720914, 0, 0, 720925, 2, 0, 720927, 4, 0, 786432, 4, 0, 786459, 2, 0, 786463, 4, 0, 851968, 4, 0, 851970, 1, 0, 851971, 2, 0, 851972, 3, 0, 851973, 3, 0, 851974, 3, 0, 851975, 3, 0, 851976, 3, 0, 851977, 3, 0, 851978, 3, 0, 851979, 5, 0, 851994, 2, 0, 851996, 2, 0, 851998, 2, 0, 851999, 4, 0, 917504, 4, 0, 917519, 0, 0, 917529, 1, 0, 917533, 2, 0, 917534, 2, 0, 917535, 4, 0, 983040, 4, 0, 983066, 2, 0, 983067, 2, 0, 983068, 2, 0, 983071, 4, 0, 1048576, 4, 0, 1048607, 4, 0, 1114112, 4, 0, 1114143, 4, 0, 1179648, 4, 0, 1179649, 4, 0, 1179650, 4, 0, 1179651, 4, 0, 1179652, 4, 0, 1179653, 4, 0, 1179654, 4, 0, 1179655, 4, 0, 1179656, 4, 0, 1179657, 4, 0, 1179658, 4, 0, 1179659, 4, 0, 1179660, 4, 0, 1179661, 4, 0, 1179662, 4, 0, 1179663, 4, 0, 1179664, 4, 0, 1179665, 4, 0, 1179666, 4, 0, 1179667, 4, 0, 1179668, 4, 0, 1179669, 4, 0, 1179670, 4, 0, 1179671, 4, 0, 1179672, 4, 0, 1179673, 4, 0, 1179674, 4, 0, 1179675, 4, 0, 1179676, 4, 0, 1179677, 4, 0, 1179678, 4, 0, 1179679, 4, 0 )

[node name="background" type="Sprite" parent="map"]
position = Vector2( 510, 300 )
scale = Vector2( 0.765625, 0.8 )
z_index = -2
texture = ExtResource( 2 )

[node name="character" type="Node2D" parent="."]
editor/display_folded = true

[node name="body" type="KinematicBody2D" parent="character"]
position = Vector2( 160, 416 )
collision_layer = 17
collision_mask = 17
script = ExtResource( 3 )

[node name="sprite" type="Sprite" parent="character/body"]
position = Vector2( 16, 16 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="collision" type="CollisionShape2D" parent="character/body"]
position = Vector2( 16.1497, 17.1802 )
shape = SubResource( 8 )

[node name="camera" type="Camera2D" parent="character/body"]
current = true
smoothing_speed = 10.0

[node name="chain" type="KinematicBody2D" parent="character"]
position = Vector2( 176, 432 )
script = ExtResource( 5 )

[node name="chainLinks" type="Line2D" parent="character/chain"]
z_index = -1
default_color = Color( 0.431373, 0.419608, 0.419608, 1 )
texture = ExtResource( 6 )
texture_mode = 1
begin_cap_mode = 2

[node name="chainHead" type="KinematicBody2D" parent="character/chain"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 7 )

[node name="headSprite" type="Sprite" parent="character/chain/chainHead"]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 4 )

[node name="headCollision" type="CollisionShape2D" parent="character/chain/chainHead"]
shape = SubResource( 9 )

[node name="enemies" type="Node2D" parent="."]

[node name="mage" type="KinematicBody2D" parent="enemies"]
position = Vector2( 172.531, 329.469 )
script = ExtResource( 8 )

[node name="mageSheet" type="Sprite" parent="enemies/mage"]
texture = ExtResource( 9 )
vframes = 8
hframes = 10
frame = 12

[node name="mageAnimation" type="AnimationPlayer" parent="enemies/mage"]
anims/mageWalk = SubResource( 10 )

[node name="mageHitbox" type="CollisionShape2D" parent="enemies/mage"]
position = Vector2( 0, 4.16962 )
shape = SubResource( 11 )

[node name="navPreview" type="Line2D" parent="enemies/mage"]
texture_mode = 1

[node name="lazer" type="Line2D" parent="enemies/mage"]
default_color = Color( 0, 1, 0.0392157, 1 )
texture_mode = 378075216

[node name="guardian" type="KinematicBody2D" parent="enemies"]

[node name="Navigation2D" type="Navigation2D" parent="enemies"]

[node name="mageNavLayer" type="NavigationPolygonInstance" parent="enemies/Navigation2D"]
position = Vector2( 0, 1.71475 )
navpoly = SubResource( 12 )
[connection signal="flightDone" from="character/body" to="character/chain" method="_on_body_flightDone"]
[connection signal="hook_attached" from="character/chain" to="character/body" method="_on_chain_hook_attached"]
[connection signal="playerHit" from="enemies/mage" to="character/body" method="_on_mage_playerHit"]
